--- a/Matching_new2.Rmd
+++ b/Matching_new2.Rmd
@@ -8,7 +8,6 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(root.dir = "C:/Users/nadir/Desktop/Matching/BKN 599 Advanced Data Analysis")
-
 ```
 
 
@@ -22,19 +21,21 @@ rm(list = ls());
 cat("\014")  
 graphics.off() 
 ```
+
 ```{r}
 library(tidyverse)
 library(Matching)
+# library(dummy)
 
 ```
 
 variables
 ```{r}
-threshold= 27
-replace= 1
+Lthreshold= 15
+Hthreshold= 30
 ```
 
-Read files
+### Read files
 ```{r}
 setwd("C:/Users/nadir/Desktop/Matching/BKN 599 Advanced Data Analysis")
 evalData=read.csv("00042_evalDataset_notext.csv")
@@ -67,6 +68,7 @@ dataMerged$finished_college=ifelse(dataMerged$DEMOedu>4,1,0)
 dataMerged$DEMOedu=NULL
 ```
 
+
 Replace -99 with missing values
 ```{r}
 dataMerged[dataMerged == -99] <- NA
@@ -80,35 +82,60 @@ for (i in 2:ncol(dataMerged)){
 }
 ```
 
-Extract visit datas
+This line removes all subjects between 16-29 hours of dosage
+```{r}
+dataMerged=dataMerged[dataMerged$dose_hours>=Hthreshold | dataMerged$dose_hours<=Lthreshold,]
+```
+
+
+
+### Extract visit datas
 ```{r}
 dataVisit1= subset(dataMerged, visitnum==1)                        
-dataVisit2= subset(dataMerged, visitnum==2)                        
+dataVisit2= subset(dataMerged, visitnum==2)       
+dataVisit3 = subset(dataMerged, visitnum==3)
 ```
 
-Removing visit2 data with missing values for NIHtotal
+### Removing visit2 data with missing values for NIHtotal
 ```{r}
 dataVisit2= dataVisit2[complete.cases(dataVisit2[,5]),]
-
+dataVisit3= dataVisit3[complete.cases(dataVisit3[,4:5]),]
 ```
 
-Removing visit1 data with no available visit 2 features
+### Removing visit1 data with no available visit 2 features
 ```{r}
 temp= data.frame(dataVisit2$pid); 
 names(temp)[1]<-paste("pid");   #renaming column name to "pid"
 dataVisit1= merge(temp,dataVisit1)
 rm(temp)
-
 ```
 
-Check number of missing values
+### Also Removing visit1 and visit 2 data with no available visit 3 features
+```{r}
+temp= data.frame(dataVisit3$pid); 
+names(temp)[1]<-paste("pid");   #renaming column name to "pid"
+dataVisit1= merge(temp,dataVisit1)
+dataVisit2= merge(temp,dataVisit2)
+rm(temp)
+```
+
+### Removing visit3 data with no available visit 1/2 features
+```{r}
+temp= data.frame(dataVisit1$pid); 
+names(temp)[1]<-paste("pid");   #renaming column name to "pid"
+dataVisit3= merge(temp,dataVisit3)
+rm(temp)
+```
+
+
+### Check number of missing values
 ```{r}
 sum(is.na(dataVisit1))
 sum(is.na(dataVisit2))
-
+sum(is.na(dataVisit3))
 ```
 
-Impute missing values- is.na(dataVisit1[,i]) returns TRUE only for row index of column with NA
+### Impute missing values- is.na(dataVisit1[,i]) returns TRUE only for row index of column with NA
 ```{r}
 for(i in 2:ncol(dataVisit1)){
   dataVisit1[is.na(dataVisit1[,i]), i] <- median(dataVisit1[,i], na.rm = TRUE)
@@ -116,35 +143,33 @@ for(i in 2:ncol(dataVisit1)){
 for(i in 2:ncol(dataVisit2)){
   dataVisit2[is.na(dataVisit2[,i]), i] <- median(dataVisit2[,i], na.rm = TRUE)
 }
-
 ```
-
-
-Check number of missing values AGAIN
+### Check number of missing values AGAIN
 ```{r}
 sum(is.na(dataVisit1))
 sum(is.na(dataVisit2))
+sum(is.na(dataVisit3))
 ```
-
-
-Creating new dataset for future calculations
+### Creating new dataset for future calculations
 ```{r}
 data12= dataVisit1
 ```
 #### Note: The Low Dose group is the treated group, and High Dose is the control group for matching
 creating binary variable indicating whether subject belongs in Low Dose or High Dose group  
 ```{r}
-data12$treat=ifelse(dataVisit1$dose_hours<=threshold, 1, 0)
+data12$treat=ifelse(dataVisit1$dose_hours<=Lthreshold, 1, 0)
 ```
 
-#### Normalization not needed as genetic matching uses covariance
+
+
+### Normalization not necessary because genetic matching involves a modified mahalanobis distance- normalize by subtracting mean and dividing by std (doing min-max instead)
 ```{r}
 # for(i in 2:(ncol(data12)-1)){
 #   data12[,i] <- (data12[,i]-mean(data12[,i]))/(max(data12[,i])-min(data12[,i]))
 # }
 ```
 
-Creating change parameters from differences in visit2 and vist 1
+### Creating change parameters from differences in visit2 and vist 1
 ```{r}
 data12$sishand_change= dataVisit2$SIS_hand-dataVisit1$SIS_hand
 data12$fugm_change= dataVisit2$ufugm-dataVisit1$ufugm
@@ -152,8 +177,13 @@ data12$logwmftMA_change= dataVisit2$log_mean_time_MA_PA-dataVisit1$log_mean_time
 data12$logwmftLA_change= dataVisit2$log_mean_time_LA_PA-dataVisit1$log_mean_time_LA_PA
 ```
 
-
-
+### Creating retention parameters from differences in visit2 and visit 3
+```{r}
+data12$sishand_retentionv23= dataVisit3$SIS_hand-dataVisit2$SIS_hand
+data12$fugm_retentionv23= dataVisit3$ufugm-dataVisit2$ufugm
+data12$logwmftMA_retentionv23= dataVisit3$log_mean_time_MA_PA-dataVisit2$log_mean_time_MA_PA
+data12$logwmftLA_retentionv23= dataVisit3$log_mean_time_LA_PA-dataVisit2$log_mean_time_LA_PA
+```
 
 # If we further include the datasets raw data and icareupdate
 
@@ -170,28 +200,46 @@ names(rawd)[1]<-paste("pid");   #renaming column name to "pid"
 rawd$pid =toupper(rawd$pid)
 names(rawd)[2]<-paste("ischemic");   #renaming column name to "pid"
 
-data12= merge(data12, rawd, by = "pid")
-```
-<!-- ### Creating 2 dataframes separatomg low dose and high dose (not used) -->
-<!-- ```{r} -->
-<!-- highdosegroup= subset(data12, treat==0) -->
-<!-- lowdosegroup= subset(data12, treat==1) -->
+data12= merge(rawd,data12, by = "pid")
 
-### Propensity Score 
-Matching code starts here (Youtube tutorial used)
+```
+
+
+### Creating 2 dataframes separatomg low dose and high dose (not used)
+```{r}
+highdosegroup= subset(data12, treat==0)
+lowdosegroup= subset(data12, treat==1)
+```
+
+
+
+#### WE WILL NOT USE THE LAST ICARE UPDATE DATA-SET AS IT WILL SLASH our data-points by 60%
+```{r}
+
+# icareupdate= read.csv("icare results update.csv")
+# names(icareupdate)[1]<-paste("pid");   #renaming column name to "pid"
+# 
+# temp= data.frame(icareupdate$pid)
+# names(temp)[1]<-paste("pid");   #renaming column name to "pid"
+# 
+# datarm= merge(temp,datarm, by = "pid")
+
+```
+
+
+
+### Propensity Score Matching code starts here (Youtube tutorial used)
 
 creates a marrix from columns/features
-
-
 ```{r}
-X= cbind(data12$SIS_hand, data12$ufugm,data12$CSgender,data12$NIHtot, data12$log_mean_time_MA_PA, data12$log_mean_time_LA_PA, data12$severity, data12$onset_to_rand, data12$age_at_rand, data12$concordance, data12$finished_college,data12$ischemic, data12$A1EstVol, data12$old_stroke,data12$multlesions)
+X= cbind(data12$SIS_hand, data12$ufugm,data12$CSgender,data12$NIHtot, 
+         data12$log_mean_time_MA_PA, data12$log_mean_time_LA_PA,
+         data12$severity, data12$onset_to_rand, data12$age_at_rand,
+         data12$concordance, data12$finished_college, 
+         #New variables from neural data
+         data12$ischemic,data12$A1EstVol, data12$old_stroke, data12$multlesions)
 
-### without nerual variables -->
-# X= cbind(data12$SIS_hand, data12$ufugm,data12$CSgender,data12$NIHtot, data12$log_mean_time_MA_PA, data12$log_mean_time_LA_PA, data 12$severity, data12$onset_to_rand, data12$age_at_rand, data12$concordance, data12$finished_college)
 ```
-
-
-
 
 
 ### Calculating the propensity score
@@ -242,7 +290,7 @@ Matching with replacement
 
 ####Matching using ATT 
 ```{r}
-rr1 =Match(Y=NULL, Tr= data12$treat, X= model$fitted.values, estimand = "ATT", 
+rr1 =Match(Tr= data12$treat, X= model$fitted.values, estimand = "ATT", 
            M=1, ties= FALSE, replace= TRUE)
 
 ```
@@ -303,74 +351,20 @@ This formula does not estimate any model. The formula is simply an efficient way
 The number of bootstrap samples to be run. If zero, no bootstraps are done. Bootstrapping is highly recommended because the bootstrapped Kolmogorov-Smirnov test provides correct coverage even when the distributions being compared are not continuous. At least 500 nboots (preferably 1000) are recommended for publication quality p-values.
 
 ```{r}
-MatchBalance(treat~ SIS_hand + ufugm + NIHtot + log_mean_time_MA_PA + log_mean_time_LA_PA +CSgender+ concordance + severity +  onset_to_rand + finished_college + age_at_rand + ischemic + A1EstVol + old_stroke +multlesions,
-             match.out= rr1, nboots=100,data= data12)
+MatchBalance(treat~ SIS_hand + ufugm + NIHtot + log_mean_time_MA_PA +
+               log_mean_time_LA_PA +CSgender+ concordance + severity + 
+               onset_to_rand + finished_college + age_at_rand +ischemic +
+               A1EstVol+ old_stroke+ multlesions+propscore,
+             match.out= rr1, nboots=100,data= datap)
 
 ```
 
 
-####Summary of the model would tell us about Causal relationship on picked Y after Matching if we pikced y in match function
+####Summary of the model will tell us about Causal relationship on picked Y after Matching
 
 ```{r}
 summary(rr1) 
 ```
-
-```{r}
-columns = colnames(data12)
-for (i in c(3:7,9,11,13,21)){
-  string= columns[i]
-  
-  b= max(data12[,i])/25
-  
-  plot1<-ggplot(data12, aes(eval(parse(text = string)))) +
-    geom_histogram(data= data12[rr1$index.treated,],fill="red",alpha =0.2, binwidth=b)+
-    geom_histogram(data= data12[-rr1$index.treated,],fill="blue",alpha =0.2, binwidth=b)+
-    ggtitle("Unmatched: Low Dose (Red) vs High Dose(Blue) ")+
-    theme(plot.title = element_text(face="bold", size=10)) +
-    xlab(paste(string, " distribution"))+
-    coord_cartesian(ylim=c(0,75))+
-    xlim(min(data12[,i]),max(data12[,i]))
-  
-  plot2<- ggplot(data12, aes(eval(parse(text = string)))) +
-    geom_histogram(data= data12[rr1$index.treated,],fill="red",alpha =0.2, binwidth=b)+
-    geom_histogram(data= data12[rr1$index.control,],fill="blue",alpha =0.2, binwidth=b)+
-    ggtitle("Matched: Low Dose (Red) vs High Dose(Blue) ")+
-    theme(plot.title = element_text( face="bold", size=10)) +
-    xlab(paste(string, " distribution"))+
-    coord_cartesian(ylim=c(0,75))+
-    xlim(min(data12[,i]),max(data12[,i]))
-  
-  
-  grid.arrange(plot1, plot2, ncol=2)
-}
-```
-
-```{r}
-for (i in c(8,10,12,20,22,23)){
-  string= columns[i]
-  
-  plot1<-ggplot(data12, aes(eval(parse(text = string)))) +
-    geom_histogram(data= data12[rr1$index.treated,],fill="red",alpha =0.2, binwidth = 0.5)+
-    geom_histogram(data= data12[-rr1$index.treated,],fill="blue",alpha =0.2, binwidth = 0.5)+
-      ggtitle("Unmatched: Low Dose(Red) vs High Dose(Blue) ")+
-    theme(plot.title = element_text(face="bold", size=10)) +
-    xlab(paste(string, " distribution"))+
-    coord_cartesian(ylim=c(0,150))  
-  
-  plot2<- ggplot(data12, aes(eval(parse(text = string)))) +
-    geom_histogram(data= data12[rr1$index.treated,],fill="red",alpha =0.2, binwidth = 0.5)+
-    geom_histogram(data= data12[rr1$index.control,],fill="blue",alpha =0.2, binwidth = 0.5)+
-    ggtitle("Matched: Low Dose (Red) vs High Dose(Blue) ")+
-    theme(plot.title = element_text(face="bold", size=10)) +
-    xlab(paste(string, " distribution"))+
-    coord_cartesian(ylim=c(0,150))
-  
-  grid.arrange(plot1, plot2, ncol=2)
-}
-```
-
-
-
 
 ####Further assessing balance- Plotting matched values for SIS Hand and Log mean time for WMFT
 ```{r}
@@ -379,10 +373,13 @@ abline(coef=c(0,1),col=2)
 
 qqplot(data12$log_mean_time_MA_PA[rr1$index.control],data12$log_mean_time_MA_PA[rr1$index.treated])
 abline(coef=c(0,1),col=2)
+
 ```
-
-
-
+####Checking unique values of matched subjects
+```{r}
+length(unique(rr1$index.treated))
+length(unique(rr1$index.control))
+```
 
 ### Genetic matching 
 This function finds optimal balance using multivariate matching where a genetic search algorithm determines the weight each covariate is given. Balance is determined by examining cumulative probability distribution functions of a variety of standardized statistics. By default, these statistics include t-tests and Kolmogorov-Smirnov tests. A variety of descriptive statistics based on empirical-QQ (eQQ) plots can also be used or any user provided measure of balance. The statistics are not used to conduct formal hypothesis tests, because no measure of balance is a monotonic function of bias and because balance should be maximized without limit. The object returned by GenMatch can be supplied to the Match function (via the Weight.matrix option) to obtain causal estimates. GenMatch uses **GENoud** to perform the genetic search. 
@@ -394,7 +391,7 @@ A vector indicating the observations which are in the treatment regime and those
 A matrix containing the variables we wish to match on. 
 #####This matrix may contain the actual observed covariates or the propensity score or a combination of both.
 
-- pop.size= ``1000
+- pop.size= 200
 Population Size. This is the number of individuals genoud uses to solve the optimization problem. The theorems proving that genetic algorithms find good solutions are asymptotic in population size. Therefore, it is important that this value not be small. See genoud for more details.
 
 **GENoud**- GENetic Optimization Using Derivatives
@@ -404,16 +401,12 @@ Genoud is a function that combines evolutionary search algorithms with derivativ
 # Adding propensity score to estimation
 X1 = cbind(X,model$fitted.values)
 
-gen1 = GenMatch(Tr= data12$treat, X=X1, pop.size=1000, replace=TRUE, max.weight=1)
-mgen1=Match(Y=NULL, Tr=data12$treat, X=X1, Weight.matrix = gen1)
+gen1 = GenMatch(Tr= data12$treat, X=X1, pop.size=10000, replace=TRUE, max.weight=1);
+mgen1=Match(Tr=data12$treat, X=X1, Weight.matrix = gen1);
 
 ```
 
-####Checking unique values of matched subjects
-```{r}
-length(unique(mgen1$index.treated))
-length(unique(mgen1$index.control))
-```
+
 
 
 ####Summary of the model will tell us about Causal relationship
@@ -425,8 +418,11 @@ summary(mgen1)
 
 #### Assessing balance
 ```{r}
-MatchBalance(treat~ SIS_hand + ufugm + NIHtot + log_mean_time_MA_PA + log_mean_time_LA_PA +CSgender+ concordance + severity +  onset_to_rand + finished_college + age_at_rand + ischemic + A1EstVol + old_stroke +multlesions,
-             match.out= mgen1, nboots=100,data= data12)
+print(MatchBalance(treat~ SIS_hand + ufugm + NIHtot + log_mean_time_MA_PA +
+               log_mean_time_LA_PA +CSgender+ concordance + severity + 
+               onset_to_rand + finished_college + age_at_rand,
+             data= data12, match.out= mgen1, nboots=0))
+
 ```
 ####Further assessing balance- Plotting matched values for SIS Hand and Log mean time for WMFT
 ```{r}
@@ -446,11 +442,11 @@ length(unique(mgen1$index.treated))
 length(unique(mgen1$index.control))
 ```
 
-## Visually assessing effects on distributions
+
 
 ```{r}
 columns = colnames(data12)
-for (i in c(3:7,9,11,13,21)){
+for (i in c(3,7:11,13,15,17)){
   string= columns[i]
   
   b= max(data12[,i])/25
@@ -473,13 +469,14 @@ for (i in c(3:7,9,11,13,21)){
     coord_cartesian(ylim=c(0,75))+
     xlim(min(data12[,i]),max(data12[,i]))
   
-  
   grid.arrange(plot1, plot2, ncol=2)
 }
+
 ```
 
+
 ```{r}
-for (i in c(8,10,12,20,22,23)){
+for (i in c(2,4,5,12,14,16)){
   string= columns[i]
   
   plot1<-ggplot(data12, aes(eval(parse(text = string)))) +
@@ -508,20 +505,10 @@ for (i in c(8,10,12,20,22,23)){
 R2_with_replace= cor(data12$log_mean_time_MA_PA[mgen1$index.control],data12$log_mean_time_MA_PA[mgen1$index.treated])^2
 R2_with_replace
 
-
 ```
 
 ```{r}
-# library(stargazer)
-# stargazer(summary(rr1))
+library(stargazer)
+stargazer(summary(rr1))
 ```
-```{r}
-t.test(data12$sishand_change[mgen1$index.control],data12$sishand_change[mgen1$index.treated])
-t.test(data12$logwmftMA_change[mgen1$index.control],data12$logwmftMA_change[mgen1$index.treated])
-t.test(data12$logwmftLA_change[mgen1$index.control],data12$logwmftLA_change[mgen1$index.treated])
 
-multiregfit=lm(data12$sishand_change~data12$A1EstVol*data12$treat)
-
-summary(multiregfit)
-
-```
